# LazyCPP

./: .gitignore  CMakeLists.txt  LazyCPPConfig.cmake.in  README.md  config_LazyCPP.h.in
apps/: test.cpp
include/: LazyAddition.hpp  LazyAdditionX.hpp  LazyCPP.h  LazyCPP.hpp  LazyConstant.hpp  LazyCosinus.hpp  LazyCreator.hpp  LazyGeneratedCode.hpp  LazyInput.hpp  LazyManager.hpp  LazyMultiplication.hpp  LazyMultiplicationX.hpp  LazyOperator1.hpp  LazyOperator2.hpp  LazyOperatorX.hpp  LazyOpposite.hpp  LazyParser.hpp  LazyParserCreator.hpp  LazySinus.hpp  LazySoustraction.hpp  LazyStorage.hpp  LazyValue.hpp  LazyVariable.hpp
src/: LazyAddition.cpp  LazyAdditionX.cpp  LazyCPP.cpp  LazyConstant.cpp  LazyCosinus.cpp  LazyCreator.cpp  LazyInput.cpp  LazyManager.cpp  LazyMultiplication.cpp  LazyMultiplicationX.cpp  LazyOperator1.cpp  LazyOperator2.cpp  LazyOperatorX.cpp  LazyOpposite.cpp  LazyParser.cpp  LazyParserCreator.cpp  LazySinus.cpp  LazySoustraction.cpp  LazyStorage.cpp  LazyValue.cpp  LazyVariable.cpp
